--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # TODO: replace the title with the name of your restaurant!
-title: "Data Exploration Blog"
+title: "Bobby Mo's"
 # TODO: write your restaurateur alter ego name below, or your own name
-author: 
+author: Cade Moffatt
 # TODO: write your Google Analytics tracking ID below
 google_analytics: G-FR5FPCDWPC
 
